Disable Print in the context menu when a modal dialog is shown

Disable the "Print..." option in the page context menu when chrome::CanPrint
is false. This disables printing when a modal dialog, such as the Media Router
dialog, is being shown, just like the Print option in the hotdog menu.

BUG=590650

Review-Url: https://codereview.chromium.org/2215123002
Cr-Commit-Position: refs/heads/master@{#410138}

Former-commit-id: 10d41a7cb5416afdb434e98c3b411284c0ab0be8