chrome/browser/renderer_context_menu/render_view_context_menu.h
@@ -164,6 +164,7 @@ class RenderViewContextMenu : public RenderViewContextMenuBase {
   bool IsSavePageEnabled() const;
   bool IsPasteEnabled() const;
   bool IsPasteAndMatchStyleEnabled() const;
+  bool IsPrintPreviewEnabled() const;
   bool IsRouteMediaEnabled() const;
 
   // Command execution functions.
